--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fontsource/inter": "^5.1.1",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@primevue/themes": "^4.2.5",
+    "@tanstack/query-core": "^5.64.2",
     "@tanstack/vue-query": "^5.64.2",
     "nuxt": "^3.15.1",
     "primeicons": "^7.0.0",
