--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "slugify": "^1.6.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
