--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
+    "quill": "^2.0.3",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.24.1"
